# scheduler

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  example_file.json  mainpage.dox  readme.md  tasks.json
docs/: specifications.md  specifications_en.md
docs/cdc/: main.tex
docs/final_report/: UI.tex  biblio.tex  conclusion.tex  intro.tex  main.tex  opinions.tex  prgm_proceed.tex  problems_encountered.tex  strategy.tex  thanks.tex
docs/html/: Client_8cpp.html  Client_8h.html  Client_8h_source.html  ParallelScheduler_8cpp.html  ParallelScheduler_8h.html  ParallelScheduler_8h_source.html  Scheduler_8cpp.html  Scheduler_8h.html  Scheduler_8h_source.html  SequentialScheduler_8cpp.html  SequentialScheduler_8h.html  SequentialScheduler_8h_source.html  annotated.html  classClient-members.html  classClient.html  classParallelScheduler-members.html  classParallelScheduler.html  classScheduler-members.html  classScheduler.html  classSequentialScheduler-members.html  classSequentialScheduler.html  classes.html  dir_133b3cdd880ca9e91a51b18f00995eeb.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  dir_b8457f6f8ae058a7b10c7aaf39a39cdd.html  doxygen.css  files.html  flags_8h.html  flags_8h_source.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  hierarchy.html  index.html  (+14 more)
docs/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_2.html  all_2.js  all_3.html  all_4.html  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  all_e.html  all_f.html  classes_0.html  classes_0.js  classes_1.html  classes_1.js  classes_2.html  classes_2.js  classes_3.html  classes_3.js  defines_0.html  defines_0.js  files_0.html  files_0.js  (+52 more)
docs/latex/: Client_8cpp.tex  Client_8h.tex  ParallelScheduler_8cpp.tex  ParallelScheduler_8h.tex  Scheduler_8cpp.tex  Scheduler_8h.tex  SequentialScheduler_8cpp.tex  SequentialScheduler_8h.tex  annotated.tex  classClient.tex  classParallelScheduler.eps  classParallelScheduler.tex  classScheduler.eps  classScheduler.tex  classSequentialScheduler.eps  classSequentialScheduler.tex  dir_133b3cdd880ca9e91a51b18f00995eeb.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b7878ad5ecbf2506f4125b9d34c97e45.tex  dir_b8457f6f8ae058a7b10c7aaf39a39cdd.tex  files.tex  flags_8h.tex  hierarchy.tex  index.tex  main_8cpp.tex  main_8h.tex  md_readme.tex  refman.tex  structtask.tex  task_8h.tex  util_8cpp.tex  util_8h.tex
docs/specifications/: title.tex
src/: TESTNAME.json  Task.h  basicScheduler.cpp  basicScheduler.h  client.cpp  client.h  flags.h  main.cpp  main.h  parallel_sched.cpp  parallel_sched.h  seq_sched.cpp  seq_sched.h  server.cpp  server.h  task.h
src/Client/: Client.cpp  Client.h
src/Scheduler/: ParallelScheduler.cpp  ParallelScheduler.h  Scheduler.cpp  Scheduler.h  SequentialScheduler.cpp  SequentialScheduler.h
src/util/: flags.h  task.h  util.cpp  util.h
